--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "web"
   command = "npm run build"
-  publish = "."
+  publish = "web/src"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
